tests/ui/fail/js_concat.stderr
error: Potentially invalid expansion. Expected an expression, an identifier, `::`, `<`, `Self`, `break` or 13 others.
 --> tests/ui/fail/js_concat.rs:5:16
  |
5 |         $left ++ $right
  |                ^
